Move footer inside the container

--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
         <h1>로또 번호 추첨기</h1>
         <div id="lotto-numbers" class="lotto-numbers"></div>
         <button id="draw-button">추첨</button>
+        <footer style="margin-top: 30px; font-size: 0.8em; color: var(--text-color); opacity: 0.8;">
+            <p>&copy; 2026 로또 번호 추첨기. All rights reserved.</p>
+        </footer>
     </main>
-    <footer style="text-align: center; margin-top: 20px; font-size: 0.8em; color: var(--text-color);">
-        <p>&copy; 2026 로또 번호 추첨기. All rights reserved.</p>
-    </footer>
+    <script src="main.js"></script>
+</body>
+</html>
