Fix SEO/Performance issues: Responsive CSS, Custom 404, Defer scripts

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
         })(window, document, "clarity", "script", "v2q2i8u5dq");
     </script>
+    <script src="main.js" defer></script>
 </head>
 <body>
     <main class="container">
@@ -78,6 +79,5 @@
             <p>&copy; 2026 로또 번호 추첨기. All rights reserved.</p>
         </footer>
     </main>
-    <script src="main.js"></script>
 </body>
 </html>
