--- a/index.html
+++ b/index.html
@@ -96,15 +96,32 @@
         <h1>로또 번호 추첨기</h1>
         <div id="lotto-numbers" class="lotto-numbers"></div>
         <div class="button-container" style="display: flex; gap: 10px; justify-content: center; margin-bottom: 20px;">
-            <button id="draw-button">추첨</button>
             <button id="history-button" style="background-color: #2196F3; color: white; border: none; padding: 15px 30px; font-size: 1.2em; border-radius: 8px; cursor: pointer; transition: background-color 0.3s, box-shadow 0.3s; box-shadow: 0 4px 15px rgba(33, 150, 243, 0.4);">기록</button>
+            <button id="draw-button">추첨</button>
         </div>
         
-        <div id="history-section" style="display: none; margin-top: 20px; text-align: left; max-height: 300px; overflow-y: auto; border: 1px solid rgba(0,0,0,0.1); border-radius: 8px; padding: 15px;">
-            <h3 style="margin-top: 0; text-align: center;">추첨 기록</h3>
-            <ul id="history-list" style="list-style: none; padding: 0;"></ul>
-            <button id="clear-history" style="display: block; margin: 10px auto 0; padding: 5px 10px; background-color: #ff5722; color: white; border: none; border-radius: 4px; cursor: pointer;">기록 삭제</button>
+        <!-- History Modal -->
+        <div id="history-modal" class="modal" style="display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0,0,0,0.5); align-items: center; justify-content: center;">
+            <div class="modal-content" style="background-color: var(--container-bg); margin: auto; padding: 20px; border: 1px solid #888; width: 90%; max-width: 400px; border-radius: 10px; position: relative; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); animation-name: animatetop; animation-duration: 0.4s">
+                <span id="close-modal" style="color: #aaa; float: right; font-size: 28px; font-weight: bold; cursor: pointer;">&times;</span>
+                <h3 style="margin-top: 0; text-align: center; color: var(--text-color);">추첨 기록</h3>
+                <ul id="history-list" style="list-style: none; padding: 0; max-height: 300px; overflow-y: auto;"></ul>
+                <button id="clear-history" style="display: block; margin: 20px auto 0; padding: 10px 20px; background-color: #ff5722; color: white; border: none; border-radius: 4px; cursor: pointer;">기록 삭제</button>
+            </div>
         </div>
+
+        <style>
+            @keyframes animatetop {
+                from {top: -300px; opacity: 0}
+                to {top: 0; opacity: 1}
+            }
+            #close-modal:hover,
+            #close-modal:focus {
+                color: black;
+                text-decoration: none;
+                cursor: pointer;
+            }
+        </style>
 
         <section class="description" style="margin-top: 40px; text-align: left; font-size: 0.9em; line-height: 1.6; border-top: 1px solid rgba(0,0,0,0.1); padding-top: 20px;">
             <h2 style="font-size: 1.2em; margin-bottom: 15px;">로또 번호 생성기 소개</h2>
