Reposition history date and rename clear history button

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <span id="close-modal" style="color: #aaa; float: right; font-size: 28px; font-weight: bold; cursor: pointer;">&times;</span>
                 <h3 style="margin-top: 0; text-align: center; color: var(--text-color);">추첨 기록</h3>
                 <ul id="history-list" style="list-style: none; padding: 0; max-height: 300px; overflow-y: auto;"></ul>
-                <button id="clear-history" style="display: block; margin: 20px auto 0; padding: 10px 20px; background-color: #ff5722; color: white; border: none; border-radius: 4px; cursor: pointer;">기록 삭제</button>
+                <button id="clear-history" style="display: block; margin: 20px auto 0; padding: 10px 20px; background-color: #ff5722; color: white; border: none; border-radius: 4px; cursor: pointer;">기록 전체 삭제</button>
             </div>
         </div>
 
