--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@
         <!-- History Modal -->
         <div id="history-modal" class="modal" style="display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0,0,0,0.5); align-items: center; justify-content: center;">
             <div class="modal-content" style="background-color: var(--container-bg); margin: auto; padding: 20px; border: 1px solid #888; width: 90%; max-width: 400px; border-radius: 10px; position: relative; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); animation-name: animatetop; animation-duration: 0.4s">
-                <span id="close-modal" style="color: #aaa; float: right; font-size: 28px; font-weight: bold; cursor: pointer;">&times;</span>
-                <h3 style="margin-top: 0; text-align: center; color: var(--text-color);">추첨 기록</h3>
+                <div style="position: relative; margin-bottom: 20px; height: 30px; display: flex; align-items: center; justify-content: center;">
+                    <h3 style="margin: 0; text-align: center; color: var(--text-color);">추첨 기록</h3>
+                    <span id="close-modal" style="position: absolute; right: 0; color: #aaa; font-size: 28px; font-weight: bold; cursor: pointer; line-height: 1;">&times;</span>
+                </div>
                 <ul id="history-list" style="list-style: none; padding: 0; max-height: 300px; overflow-y: auto;"></ul>
                 <button id="clear-history" style="display: block; margin: 20px auto 0; padding: 10px 20px; background-color: #ff5722; color: white; border: none; border-radius: 4px; cursor: pointer;">기록 전체 삭제</button>
             </div>
