--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <meta property="og:title" content="로또 번호 추첨기 - 무료 행운 번호 생성">
     <meta property="og:description" content="클릭 한 번으로 행운의 로또 번호를 무료로 추첨해보세요!">
     <meta property="og:url" content="https://rowen1921.github.io/product-builder-jocoding/">
-    <meta property="og:image" content="https://rowen1921.github.io/product-builder-jocoding/og-image.svg">
+    <meta property="og:image" content="https://rowen1921.github.io/product-builder-jocoding/og-image.png">
     <meta property="og:locale" content="ko_KR">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="로또 번호 추첨기">
     <meta name="twitter:description" content="행운의 로또 번호를 지금 바로 확인하세요.">
-    <meta name="twitter:image" content="https://rowen1921.github.io/product-builder-jocoding/og-image.svg">
+    <meta name="twitter:image" content="https://rowen1921.github.io/product-builder-jocoding/og-image.png">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://rowen1921.github.io/product-builder-jocoding/">
